objects/Installment__c.object
<CustomObject>
    <description>Created for use with Retail Lottery Opportunities</description>
    <fields>
        <fullName>Date_Installment_Released__c</fullName>
        <label>Date Installment Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Federal_Withholding__c</fullName>
        <label>Federal Withholding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Date__c</fullName>
        <label>Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Installments are intended for Retail and Wholesale Lottery Opportunities only.</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Specialty Finance - Retail Lottery, Specialty Finance - Wholesale Lottery</value>
            </filterItems>
            <infoMessage>Installments are intended for Retail and Wholesale Lottery Opportunities only.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State_Withholding__c</fullName>
        <label>State Withholding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1099_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1099 Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>Installment</label>
    <nameField>
        <displayFormat>INSTL-{000000}</displayFormat>
        <label>Installment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>